fix: correct gitlab token

--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -18,7 +18,7 @@ jobs:
 
       - name: Push to NTNU GitLab Workspace  # An optional Name
         env:  # Importing needed variables defined in the environment or repository level "secrets and variables".
-          TOKEN: ${{ secrets.GITLAB}}  # Defining a variable names TOKEN in which holds the GITLAB_TOKEN defined
+          TOKEN: ${{ secrets.MySite-env}}  # Defining a variable names TOKEN in which holds the GITLAB_TOKEN defined
                                              # in the environment(MyEnvironmentName) -> secrets
           # For the first push, An owner token is needed.
         run: |
